--- a/src/starry-sky.css
+++ b/src/starry-sky.css
@@ -1,3 +1,11 @@
+
+.starry-sky-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
 .noite {
   background: -webkit-linear-gradient(top, rgb(0, 0, 0) 50%, rgb(25, 19, 39)80%, rgb(43, 32, 72));
   width: 100%;
@@ -8,11 +16,14 @@
 
 .constelacao {
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  animation: rotate 600s infinite linear;
+  width: 150vw;
+  height: 150vw;
+  max-width: none;
+  max-height: none;
+  transform: translate(-50%, -50%);
+  animation: rotate 86400s infinite linear;
+  pointer-events: none;
+  z-index: 0;
 }
 
 .estrela {
@@ -85,7 +96,7 @@
 }
 
 .lua .textura {
-  background-image: url(../img/bgMoon.png);
+  background-image: url(../public/bgMoon.png);
   background-position: center;
   background-size: 100%;
   width: 100%;
