Move background images to src/images and update imports
Relocated bgMoon.png and bgTree.png from public/ to src/images/ for better asset management. Updated StarrySky.tsx to import these images directly and adjusted CSS to reference the new path. Also incremented package version to 1.0.5.

--- a/src/starry-sky.css
+++ b/src/starry-sky.css
@@ -96,7 +96,7 @@
 }
 
 .lua .textura {
-  background-image: url(../public/bgMoon.png);
+  background-image: url(./images/bgMoon.png);
   background-position: center;
   background-size: 100%;
   width: 100%;
